--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -27,6 +27,10 @@
               <div class="col-sm-12 col-lg-12" style=" margin-top:6px ">
                 <input name="flatNumber" type="text" id="inputFlatNumber" class="form-control" value="<%= resident.flatNumber %>"  required>
               </div>
+              <div class="col-sm-12 col-lg-12" style=" margin-top:4% "> <b> House area (sq ft) :</b></div>
+              <div class="col-sm-12 col-lg-12" style=" margin-top:6px ">
+                <input name="squareFeet" type="number" id="inputSquareFeet" class="form-control" value="<%= resident.squareFeet %>"  required>
+              </div>
               <!-- Doesn't update email & password -->
               <!-- <div class="col-sm-12 col-lg-12" style=" margin-top:4% "> <b> Email :</b></div>
               <div class="col-sm-12 col-lg-12" style=" margin-top:6px ">
