--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -37,6 +37,11 @@
             </div>
             <hr class="my-4">
             <div class=row style="margin: 13px;margin-bottom:0px;margin-top:0px;">
+              <div class="col-sm-6 col-lg-4"> House Area :</div>
+              <div class="col-sm-6 col-lg-8"><span class="profile-text"><%= resident.squareFeet %> sq ft</span></div>
+            </div>
+            <hr class="my-4">
+            <div class=row style="margin: 13px;margin-bottom:0px;margin-top:0px;">
               <div class="col-sm-6 col-lg-4"> Email ID :</div>
               <div class="col-sm-6 col-lg-8">
                 <span class="profile-text" style="text-align:justify; word-break:break-all"><%= resident.username %></span>
