--- a/views/register.ejs
+++ b/views/register.ejs
@@ -31,10 +31,14 @@
                     </div>
                   </div>
                   <div class="col-sm-12 col-lg-6">
-                    <div class="form-label-group">
-                      <input name="flatNumber" type="text" id="inputFlatNumber" class="form-control" placeholder="Flat number" required>
-                      <label for="inputFlatNumber">Flat number</label>
-                    </div>
+                                    <div class="form-label-group">
+                  <input name="flatNumber" type="text" id="inputFlatNumber" class="form-control" placeholder="Flat number" required>
+                  <label for="inputFlatNumber">Flat number</label>
+                </div>
+                <div class="form-label-group">
+                  <input name="squareFeet" type="number" id="inputSquareFeet" class="form-control" placeholder="House area in square feet" required>
+                  <label for="inputSquareFeet">House area (sq ft)</label>
+                </div>
                   </div>
                 </div>
                 <div class="form-label-group">
