--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -35,6 +35,10 @@
                   <label for="inputFlatNumber">Flat number</label>
                 </div>
                 <div class="form-label-group">
+                  <input name="squareFeet" type="number" id="inputSquareFeet" class="form-control" placeholder="House area in square feet" required>
+                  <label for="inputSquareFeet">House area (sq ft)</label>
+                </div>
+                <div class="form-label-group">
                   <input name="username" type="email" id="email" class="form-control" placeholder="Email" required>
                   <label for="email">Email</label>
                 </div>
