--- a/views/editBill.ejs
+++ b/views/editBill.ejs
@@ -35,6 +35,10 @@
               <div class="col-sm-12 col-lg-12" style=" margin-top:6px ">
                 <input name="parkingCharges" type="text" id="parkingCharges" class="form-control" value="<%= maintenanceBill.parkingCharges %>"  required>
               </div>
+              <div class="col-sm-12 col-lg-12" style=" margin-top:4% "> <b> Area-based Rate (₹ per sq ft) :</b></div>
+              <div class="col-sm-12 col-lg-12" style=" margin-top:6px ">
+                <input name="squareFeetRate" type="number" step="0.01" id="squareFeetRate" class="form-control" value="<%= maintenanceBill.squareFeetRate %>"  required>
+              </div>
             </div>
             <div style=" margin-top: 4%;">
               <button type="submit" class="btn btn-primary btn-md  float-right" style="margin: 10px;">Save</button>
