--- a/views/signupEdit.ejs
+++ b/views/signupEdit.ejs
@@ -36,6 +36,10 @@
               <div class="col-sm-12 col-lg-12" style=" margin-top:6px ">
                 <input name="flatNumber" type="tel" id="flatNumber" class="form-control" value="<%= user.flatNumber %>" required>
               </div>
+              <div class="col-sm-12 col-lg-12" style=" margin-top:4% "> <b> House Area (sq ft) :</b></div>
+              <div class="col-sm-12 col-lg-12" style=" margin-top:6px ">
+                <input name="squareFeet" type="number" id="squareFeet" class="form-control" value="<%= user.squareFeet || '' %>" required>
+              </div>
             </div>
             <div style=" margin-top: 4%;">
               <button type="submit" class="btn btn-primary btn-md  float-right" style="margin: 10px;">Submit</button>
