--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,7 +13,7 @@
         <h2>Get In Touch</h2>
         <div class="subcategories">
           <p id="text2">If you have any questions, please feel free to drop us a mail.</p>
-          <a href="mailto:contact@esociety.com" target="_blank" style="font-size: 14px;">
+          <a href="mailto:contact@communityhub.com" target="_blank" style="font-size: 14px;">
             <i class="fas fa-paper-plane"></i> Send Message
           </a>
         </div>
