Stripe Payment integrated

--- a/views/bill.ejs
+++ b/views/bill.ejs
@@ -238,7 +238,7 @@
 
 <script type="text/javascript">
   // Create an instance of the Stripe object with your publishable API key
-  var stripe = Stripe("pk_test_51ISbSbKm0w4ydVKOdI0dJjnDP1wkND8lSBs02U2bXTT0QX3kRDmLzO38Q6I4SmlsFP3mAaXLAdaFKPhIz2o0axjk00FkI15wzR");
+  var stripe = Stripe("<%= publishableKey %>");
   var checkoutButton = document.getElementById("checkout-button");
 
   checkoutButton.addEventListener("click", function () {
