--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <!-- Login page -->
 <%- include('partials/headerForm') %>
 
-  <body>
+  <body class="form-page">
     <div class="container">
       <div class="row">
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
