--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <!-- Admin signup form -->
 <%- include('partials/headerForm') %>
 
-  <body>
+  <body class="form-page">
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-9 col-lg-7 mx-auto">
