--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,7 @@
 <!-- Member signup form -->
 <%- include('partials/headerForm') %>
 
-  <body>
+  <body class="form-page">
     <div class="container">
       <div class="row">
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
