--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -2,74 +2,104 @@
 <%- include('partials/header') %>
 
 <div style="padding:4%; padding-top: 0%; font-family:sans-serif; font-size:14px;">
-  <h2 style="background-color:rgb(51, 51, 51); padding:18px;color:white; text-align: center; border-radius: 1rem; font-size: 20px; max-width: 1000px; margin:auto">
-      Emergency Contacts
-  </h2>
+  <div class="page-heading">
+    <span>Emergency Contacts</span>
+  </div>
   <% if(isAdmin){ %>
   <row>
     <col-4>
-        <a href="/editContacts" class="btn btn-primary btn-md text-uppercase center" style="border-radius:3rem; max-width:150px; display: block; margin: auto; margin-top: 10px;">
-          Edit Contact
+        <a href="/editContacts" class="btn btn-pastel-info btn-modern text-center d-block mx-auto mt-3" style="max-width: 180px; border-radius: 2rem;">
+          <i class="fas fa-edit me-2"></i>EDIT CONTACTS
         </a>
     </col-4>
   </row>
   <% } %>
-  <div class="flex-container" style="margin-top: 10px;">
-    <div>
-      <ul class="list-group zoom">
-        <li class="list-group-item flat-number"><i class="fas fa-wrench"></i> Plumbing Service</li>
-        <li class="list-group-item flat-owner">
-          <i class="fas fa-phone-square-alt"></i> <%= contact.plumbingService %>
-        </li>
-      </ul>
-    </div>
-    <div>
-      <ul class="list-group zoom">
-        <li class="list-group-item flat-number"><i class="fas fa-pills"></i> Pharmacy</li>
-        <li class="list-group-item flat-owner">
-          <i class="fas fa-phone-square-alt"></i> <%= contact.medicineShop %>
-        </li>
-      </ul>
-    </div>
-    <div>
-      <ul class="list-group zoom">
-        <li class="list-group-item flat-number"><i class="fas fa-user-md"></i> Doctor</li>
-        <li class="list-group-item flat-owner">
-          <i class="fas fa-phone-square-alt"></i> <%= contact.doctor %>
-        </li>
-      </ul>
-    </div>
-    <div>
-      <ul class="list-group zoom">
-        <li class="list-group-item flat-number"><i class="fas fa-ambulance"></i> Ambulance</li>
-        <li class="list-group-item flat-owner">
-          <i class="fas fa-phone-square-alt"></i> <%= contact.ambulance %>
-        </li>
-      </ul>
-    </div>
-    <div>
-      <ul class="list-group zoom">
-        <li class="list-group-item flat-number"><i class="fas fa-fire-alt"></i> Fire Station</li>
-        <li class="list-group-item flat-owner">
-          <i class="fas fa-phone-square-alt"></i> <%= contact.fireStation %>
-        </li>
-      </ul>
-    </div>
-    <div>
-      <ul class="list-group zoom">
-        <li class="list-group-item flat-number"><i class="fas fa-shield-alt"></i> Police Station</li>
-        <li class="list-group-item flat-owner">
-          <i class="fas fa-phone-square-alt"></i> <%= contact.policeStation %>
-        </li>
-      </ul>
-    </div>
-    <div>
-      <ul class="list-group zoom">
-        <li class="list-group-item flat-number"><i class="fas fa-user-shield"></i> Guard</li>
-        <li class="list-group-item flat-owner">
-          <i class="fas fa-phone-square-alt"></i> <%= contact.guard %>
-        </li>
-      </ul>
+  <div class="container container-profile">
+    <div class="row">
+      <div class="col">
+        <div class="card card-profile my-5" style="margin-top: 10px;">
+          <div class="card-body" style="padding:3% 8% 3%;">
+            <div>
+              <i class="fas fa-wrench"></i> <b>Plumbing Service</b>
+              <p style="padding-left: 20px; color: grey;">
+                <%= contact.plumbingService %>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card card-profile my-5" style="margin-top: 10px;">
+          <div class="card-body" style="padding:3% 8% 3%;">
+            <div>
+              <i class="fas fa-pills"></i> <b>Pharmacy</b>
+              <p style="padding-left: 20px; color: grey;">
+                <%= contact.medicineShop %>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card card-profile my-5" style="margin-top: 10px;">
+          <div class="card-body" style="padding:3% 8% 3%;">
+            <div>
+              <i class="fas fa-user-md"></i> <b>Doctor</b>
+              <p style="padding-left: 20px; color: grey;">
+                <%= contact.doctor %>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card card-profile my-5" style="margin-top: 10px;">
+          <div class="card-body" style="padding:3% 8% 3%;">
+            <div>
+              <i class="fas fa-ambulance"></i> <b>Ambulance</b>
+              <p style="padding-left: 20px; color: grey;">
+                <%= contact.ambulance %>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card card-profile my-5" style="margin-top: 10px;">
+          <div class="card-body" style="padding:3% 8% 3%;">
+            <div>
+              <i class="fas fa-fire-alt"></i> <b>Fire Station</b>
+              <p style="padding-left: 20px; color: grey;">
+                <%= contact.fireStation %>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card card-profile my-5" style="margin-top: 10px;">
+          <div class="card-body" style="padding:3% 8% 3%;">
+            <div>
+              <i class="fas fa-shield-alt"></i> <b>Police Station</b>
+              <p style="padding-left: 20px; color: grey;">
+                <%= contact.policeStation %>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card card-profile my-5" style="margin-top: 10px;">
+          <div class="card-body" style="padding:3% 8% 3%;">
+            <div>
+              <i class="fas fa-user-shield"></i> <b>Guard</b>
+              <p style="padding-left: 20px; color: grey;">
+                <%= contact.guard %>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
