--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,7 +14,7 @@
         <div class="subcategories">
           <p id="text2">If you have any questions, please feel free to drop us a mail.</p>
           <a href="mailto:contact@communityhub.com" target="_blank" style="font-size: 14px;">
-            <i class="fas fa-paper-plane"></i> Send Message
+            <i class="fas fa-paper-plane"></i> akshayraj@communityhub.com
           </a>
         </div>
       </div>
