--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,12 +9,18 @@
   <meta name="description" content="Simplify everyday living for your housing society!">
   <meta name="google-site-verification" content="P8hqAw19_O3IT82LJYjlEsI9TDS9vMATQkZXKoe2M8E">
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Custom Styles -->
   <link rel="stylesheet" href="styles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- Bootstrap 5 JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
   <script src="https://js.stripe.com/v3/"></script>
   <script src="pdf-generator.js"></script>
@@ -23,38 +29,59 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid" id="navbar">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-        </button>
-        <a class="navbar-brand" href="/home">
-          <img src="images/diversity.png" alt="Community Hub">
-        </a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav" id="navlist">
-          <li><a href="/residents">Residents</a></li>
-          <li><a href="/noticeboard">Noticeboard</a></li>
-          <li><a href="/bill">Bill</a></li>
-          <li><a href="/helpdesk">Helpdesk</a></li>
-          <li><a href="/contacts">Emergency</a></li>
-          <li><a href="/profile">Profile</a></li>
+  <!-- Modern Internal Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark modern-navbar">
+    <div class="container-fluid px-4">
+      <a class="navbar-brand d-flex align-items-center" href="/home">
+        <img src="images/diversity.png" alt="Community Hub" class="me-2" style="height: 40px;">
+        <span class="brand-text">Community Hub</span>
+      </a>
+      
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/residents">
+              <i class="fas fa-users me-1"></i>Residents
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/noticeboard">
+              <i class="fas fa-clipboard-list me-1"></i>Noticeboard
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/bill">
+              <i class="fas fa-file-invoice-dollar me-1"></i>Bill
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/helpdesk">
+              <i class="fas fa-headset me-1"></i>Helpdesk
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contacts">
+              <i class="fas fa-phone-alt me-1"></i>Emergency
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/profile">
+              <i class="fas fa-user-cog me-1"></i>Profile
+            </a>
+          </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/logout">Logout</a></li>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link btn btn-outline-light px-3" href="/logout">
+              <i class="fas fa-sign-out-alt me-1"></i>Logout
+            </a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="advertisement">
-    <ins class="adsbygoogle"
-      data-ad-client="ca-pub-6343650725036009"
-      data-ad-slot="3263921922"
-      data-ad-format="auto"
-      data-full-width-responsive="true"
-    ></ins>
-  </div>
