--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,95 +1,193 @@
-<!-- Admin signup form -->
-<%- include('partials/headerForm') %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Register Society - Community Hub</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="description" content="Register your society with Community Hub">
+  <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+</head>
 
-  <body class="form-page">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-9 col-lg-7 mx-auto">
-          <div class="card card-signin my-5">
-            <div class="card-body">
-              <h4 class="card-title text-center">Admin Registration</h4>
-              <form class="form-signin" action="/register" method="POST">
-                <div class="row">
-                  <div class="col-sm-12 col-lg-6">
-                    <div class="form-label-group">
-                      <input name="firstName" type="text" id="inputFirstName" class="form-control" placeholder="First name " required autofocus>
-                      <label for="inputFirstName">First name</label>
-                    </div>
-                  </div>
-                  <div class="col-sm-12 col-lg-6">
-                    <div class="form-label-group">
-                      <input name="lastName" type="text" id="inputLastName" class="form-control" placeholder="Last name " required>
-                      <label for="inputLastName">Last name</label>
-                    </div>
-                  </div>
+<body class="modern-form-page">
+  <div class="form-container">
+    <div class="container-fluid h-100">
+      <div class="row h-100">
+        <div class="col-lg-6 d-none d-lg-block form-left">
+          <div class="branding-section">
+            <div class="branding-content">
+              <div class="brand-logo">
+                <img src="images/diversity.png" alt="Community Hub" class="logo-img">
+                <h1>Community Hub</h1>
+              </div>
+              <h2>Register Your Society!</h2>
+              <p>Create an admin account and register your housing society to start managing your community.</p>
+              <div class="feature-list">
+                <div class="feature-item">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Complete Control</span>
                 </div>
-                <div class="row">
-                  <div class="col-sm-12 col-lg-6">
-                    <div class="form-label-group">
-                      <input name="phoneNumber" type="text" id="inputPhoneNumber" class="form-control" placeholder="Phone number" required>
-                      <label for="inputPhoneNumber">Phone number</label>
-                    </div>
-                  </div>
-                  <div class="col-sm-12 col-lg-6">
-                                    <div class="form-label-group">
-                  <input name="flatNumber" type="text" id="inputFlatNumber" class="form-control" placeholder="Flat number" required>
-                  <label for="inputFlatNumber">Flat number</label>
+                <div class="feature-item">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Easy Management</span>
                 </div>
-                <div class="form-label-group">
-                  <input name="squareFeet" type="number" id="inputSquareFeet" class="form-control" placeholder="House area in square feet" required>
-                  <label for="inputSquareFeet">House area (sq ft)</label>
+                <div class="feature-item">
+                  <i class="fas fa-check-circle"></i>
+                  <span>Community Building</span>
                 </div>
-                  </div>
-                </div>
-                <div class="form-label-group">
-                  <input name="societyName" type="text" id="inputSocietyName" class="form-control" placeholder="Society name " required>
-                  <label for="inputSocietyName">Society name</label>
-                </div>
-                <div class="form-label-group">
-                  <input name="address" type="text" id="inputSocietyAddress" class="form-control" placeholder="Society address " required>
-                  <label for="inputSocietyAddress">Society address</label>
-                </div>
-                <div class="row">
-                  <div class="col-sm-12 col-lg-6">
-                    <div class="form-label-group">
-                      <input name="city" type="text" id="inputCity" class="form-control" placeholder="City" required>
-                      <label for="inputCity">City</label>
-                    </div>
-                  </div>
-                  <div class="col-sm-12 col-lg-6">
-                    <div class="form-label-group">
-                      <input name="district" type="text" id="inputDistrict" class="form-control" placeholder="District" required>
-                      <label for="inputDistrict">District</label>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-label-group">
-                  <input name="postalCode" type="text" id="inputPostcode" class="form-control" placeholder="Postal code" required>
-                  <label for="inputPostcode">Postal code</label>
-                </div>
-                <div class="form-label-group">
-                  <input name="username" type="email" id="email" class="form-control" placeholder="Email" required>
-                  <label for="email">Email</label>
-                </div>
-                <div class="form-label-group">
-                  <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                  <label for="inputPassword">Password</label>
-                </div>
-                <button class="btn btn-lg btn-dark btn-block text-uppercase" type="submit" style="font-size:15px;">
-                  Register
-                </button>
-                <hr class="my-4">
-                <h6 class="card-text text-center">Society already registered? </h6></b>
-                <a href="/login" class="btn  btn-danger btn-block text-uppercase" type="submit" style="font-size:15px;">
-                  Sign-in
-                </a>
-                <a href="/" class="btn  btn-secondary btn-block text-uppercase">Home</a>
-              </form>
+              </div>
             </div>
+          </div>
+        </div>
+        
+        <div class="col-lg-6 form-right">
+          <div class="form-wrapper">
+            <div class="form-header">
+              <h2>Society Registration</h2>
+              <p>Fill in your details to register your society as admin</p>
+            </div>
+            <form class="modern-form" action="/register" method="POST">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="firstName" class="form-label">
+                      <i class="fas fa-user me-2"></i>First Name
+                    </label>
+                    <input name="firstName" type="text" id="firstName" class="form-control" 
+                           placeholder="Enter first name" required>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="lastName" class="form-label">
+                      <i class="fas fa-user me-2"></i>Last Name
+                    </label>
+                    <input name="lastName" type="text" id="lastName" class="form-control" 
+                           placeholder="Enter last name" required>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="phoneNumber" class="form-label">
+                      <i class="fas fa-phone me-2"></i>Phone Number
+                    </label>
+                    <input name="phoneNumber" type="tel" id="phoneNumber" class="form-control" 
+                           placeholder="Enter phone number" required>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="flatNumber" class="form-label">
+                      <i class="fas fa-door-open me-2"></i>Flat Number
+                    </label>
+                    <input name="flatNumber" type="text" id="flatNumber" class="form-control" 
+                           placeholder="e.g., A-101" required>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="form-group">
+                <label for="squareFeet" class="form-label">
+                  <i class="fas fa-ruler-combined me-2"></i>Area (sq ft)
+                </label>
+                <input name="squareFeet" type="number" id="squareFeet" class="form-control" 
+                       placeholder="House area in square feet" required>
+              </div>
+              <div class="form-group">
+                <label for="societyName" class="form-label">
+                  <i class="fas fa-building me-2"></i>Society Name
+                </label>
+                <input name="societyName" type="text" id="societyName" class="form-control" 
+                       placeholder="Enter society name" required>
+              </div>
+              
+              <div class="form-group">
+                <label for="address" class="form-label">
+                  <i class="fas fa-map-marker-alt me-2"></i>Society Address
+                </label>
+                <input name="address" type="text" id="address" class="form-control" 
+                       placeholder="Enter complete society address" required>
+              </div>
+              
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="city" class="form-label">
+                      <i class="fas fa-city me-2"></i>City
+                    </label>
+                    <input name="city" type="text" id="city" class="form-control" 
+                           placeholder="Enter city" required>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="district" class="form-label">
+                      <i class="fas fa-map me-2"></i>District
+                    </label>
+                    <input name="district" type="text" id="district" class="form-control" 
+                           placeholder="Enter district" required>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="form-group">
+                <label for="postalCode" class="form-label">
+                  <i class="fas fa-mail-bulk me-2"></i>Postal Code
+                </label>
+                <input name="postalCode" type="text" id="postalCode" class="form-control" 
+                       placeholder="Enter postal code" required>
+              </div>
+              
+              <div class="form-group">
+                <label for="email" class="form-label">
+                  <i class="fas fa-envelope me-2"></i>Email Address
+                </label>
+                <input name="username" type="email" id="email" class="form-control" 
+                       placeholder="Enter your email" required>
+              </div>
+              
+              <div class="form-group">
+                <label for="password" class="form-label">
+                  <i class="fas fa-lock me-2"></i>Password
+                </label>
+                <input name="password" type="password" id="password" class="form-control" 
+                       placeholder="Create a password" required>
+              </div>
+              <button type="submit" class="btn btn-pastel-primary btn-modern w-100 mb-4">
+                <i class="fas fa-building me-2"></i>Register Society
+              </button>
+              
+              <div class="divider">
+                <span>Society already registered?</span>
+              </div>
+              
+              <div class="form-actions">
+                <a href="/login" class="btn btn-outline-primary btn-modern w-100 mb-3">
+                  <i class="fas fa-sign-in-alt me-2"></i>Sign In Instead
+                </a>
+                <a href="/" class="btn btn-light btn-modern w-100 mb-3">
+                  <i class="fas fa-home me-2"></i>Back to Home
+                </a>
+                <!-- Theme and settings link -->
+              </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
-  </body>
-
+  </div>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function showThemeOptions() {
+      alert('Theme Options:\n• Pastel Colors: Enabled\n• Favicon: Community Hub Icon\n• Responsive Design: Yes');
+    }
+  </script>
+</body>
 </html>
